libs/pavex_cli/tests/ui_tests/singletons_must_be_clonable/expectations/stderr.txt
Error: 
  × `app::NonCloneSingleton` does not implement the `std::clone::Clone` trait.
    ╭─[src/lib.rs:11:1]
 11 │ pub fn blueprint() -> AppBlueprint {
 12 │     AppBlueprint::new().constructor(f!(crate::NonCloneSingleton::new), Lifecycle::Singleton)
    ·                                     ────────────────┬────────────────
    ·                                                     ╰── The singleton's constructor was registered here
 13 │ }
    ╰────